fixing some style stuff on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -16,6 +16,10 @@
       font-size: 1.563em !important;
   }
 
+  body {
+    width: 100% !important;
+  }
+
   /* styling for the main body of the page */
   .light-body-styles {
       background-color: #DBE9F5;
@@ -40,7 +44,7 @@
   .content-styling {
       margin-left: auto;
       margin-right: auto;
-      width: 65%;
+      width: 75%;
       min-height: 100vh;
       max-height: 100%;
   }
@@ -53,4 +57,8 @@
   .route-data {
     padding: 0.25em !important;
     margin: 0;
+  }
+
+  .dropdown-option {
+    width: 75%;
   }
